2003-06-30  Werner Koch  <wk@gnupg.org>

	* src/gpg-error.h: Add WRONG_CARD.

2003-06-22  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpg-error.h: Fix value of GPG_ERR_CANCELED.

2003-06-06  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Define GPG_ERROR_CONFIG_LIBS and
	GPG_ERROR_CONFIG_CFLAGS.
	Add src/gpg-error-config to config files.
	* src/Makefile.am (EXTRA_DIST): Add gpg-error-config.in and
	gpg-error.m4.
	(bin_SCRIPTS): New variable.
	(m4datadir, m4data_DATA): New variables.
	* src/gpg-error-config.in: New file.
	* src/gpg-error.m4: New file.

2003-06-05  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpg-error.h (gpg_err_make_from_errno): Fix implementation.

	* src/gpg-error.h (gpg_err_code_t): Add GPG_ERR_SIG_EXPIRED.
	(err-codes.h.in): Likewise.

	* src/gpg-error.h (gpg_error_from_errno): Change return type to
	gpg_error_t.

2003-06-04  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpg-error.h (gpg_err_code_t): Add GPG_ERR_INV_ENGINE,
	GPG_ERR_PUBKEY_NOT_TRUSTED, GPG_ERR_DECRYPT_FAILED,
	GPG_ERR_KEY_EXPIRED.
	(gpg_make_error): Rename to gpg_err_make.
	(gpg_error): Use here.
	* tests/t-strerror.c (main): And here.
	(gpg_make_error_from_errno): Rename to gpg_err_make_from_errno.

	* src/gpg-error.h (gpg_make_error_from_errno): New inline function.
	(gpg_error_from_errno): Likewise.

	* src/code-from-errno.c (gpg_err_code_from_errno): Handle the case
	of no error at all.

2003-06-04  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpg-error.h (gpg_err_source_t): Add GPG_ERR_SOURCE_USER_1 to
	GPG_ERR_SOURCE_USER_4.
	(gpg_err_code_t): Add GPG_ERR_USER_1 to GPG_ERR_USER_16.
	* src/err-sources.h.in: Likewise.
	* src/err-codes.h.in: Likewise.

	* src/gpg-error.h: Rename GPG_ERR_INVALID_RESPONSE to
	GPG_ERR_INV_RESPONSE, GPG_ERR_INVALID_CARD to GPG_ERR_INV_CARD,
	GPG_ERR_INVALID_INDEX to GPG_ERR_INV_INDEX, GPG_ERR_INVALID_ID to
	GPG_ERR_INV_ID, GPG_ERR_AGENT_ERROR to GPG_ERR_AGENT,
	GPG_ERR_ASSUAN_ERROR to GPG_ERR_ASSUAN, GPG_ERR_PIN_ENTRY_ERROR to